SITE.css
body{}

h1, h2, h3, h4{}



.body-haut{
    display: flex;
}

#scrollbar li, a{
    list-style-type: none;
    text-decoration: none;
    color: black;
}

#scrollbar{
    text-align: center;
    width: 10%;
    overflow: auto;
    border-bottom: solid rgb(158, 158, 158);
}

#scrollbar nav{
    width: auto;
    height:30%;
}







#container{
    width: 90%;
}

main{
    margin: 5%;
}



table{
    width: 100%;
    table-layout: fixed;
    border-collapse: collapse;
}

tr #nom{
    width: 15%;
}
tr #description{
    width: 70%;
}
tr #valeur{
    width: 15%;
}

table,
td, th{
    text-align: start;
    border: 1px solid #000000;
}

tbody td{
    padding: 2%;
    overflow: auto;
}

thead {
    background-color: #333;
    color: white;
}





main section{
    display: flex;
    width: 100%;
}

.boxleft{
    padding: 10%;
    width: 50%;
    border: solid black;
}

.boxright{
    padding: 10%;
    width: 50%;
    border: solid black;
}





#test{
    margin: 20px;
    padding: 20px;
    border: solid red;
}

